--- a/src/app/components/layout/navbar-component/navbar-component.html
+++ b/src/app/components/layout/navbar-component/navbar-component.html
@@ -13,7 +13,7 @@
     <input
       type="text"
       placeholder="Search..."
-      class="w-full rounded-xl border border-gray-100 p-2 text-xs text-gray-600 focus:outline-none focus:border-indigo-600"
+      class="w-full rounded-xl border border-gray-100 p-2 text-xs text-gray-600 focus:outline-none focus:border-gray-200"
     />
   </div>
 
