--- a/src/app/components/layout/sidebar-component/sidebar-component.html
+++ b/src/app/components/layout/sidebar-component/sidebar-component.html
@@ -24,8 +24,8 @@
           (click)="navigateToPage(sidebarMenu.id)"
           class="flex items-center w-full px-2 py-2 my-1 rounded-md transition-colors duration-200 cursor-pointer"
           [ngClass]="{
-            'bg-[#ff6c1a] text-white': activeUrl() === sidebarMenu.link,
-            'text-gray-700 hover:bg-[#ff6c1a] hover:text-white': activeUrl() !== sidebarMenu.link
+            'bg-gray-200 border border-indigo-200': activeUrl() === sidebarMenu.link,
+            'text-gray-700 hover:bg-gray-200 hover:text-gray-900': activeUrl() !== sidebarMenu.link
           }"
         >
           <i class="fas w-5 min-w-[24px] text-center mx-1" [class]="sidebarMenu.icon"></i>
