--- a/src/app/components/layout/navbar-component/navbar-component.html
+++ b/src/app/components/layout/navbar-component/navbar-component.html
@@ -1,4 +1,4 @@
-<div class="flex items-center justify-between h-12 px-4 md:px-6">
+<div class="flex items-center bg-white justify-between h-12 px-4 md:px-6">
 
   <button
     class="md:hidden top-4 left-4 z-99 p-2 mx-2 rounded-md bg-gray-100 cursor-pointer text-black"
