--- a/src/app/components/layout/sidebar-component/sidebar-component.html
+++ b/src/app/components/layout/sidebar-component/sidebar-component.html
@@ -1,13 +1,13 @@
 <!-- Sidebar Wrapper -->
 <div
-  class="fixed inset-y-0 left-0 z-50 w-64 shadow-lg transform transition-transform duration-300 ease-in-out"
+  class="fixed inset-y-0 left-0 z-50 w-64 bg-white transform transition-transform duration-300 ease-in-out"
   [class.translate-x-0]="layoutService.isSidebarOpen()"
   [class.-translate-x-full]="!layoutService.isSidebarOpen()"
 >
   <!-- Sidebar Content -->
   <div class="flex flex-col h-full">
     <!-- Logo -->
-    <div class="h-49 flex items-center justify-center md:justify-start border-b border-gray-100 px-3">
+    <div class="h-49 flex items-center border-b border-gray-100 justify-center md:justify-start px-3">
       <i class="fas fa-building text-[#ff6c1a] text-xl mx-1 w-6 min-w-[24px] text-center"></i>
       <h1
         class="hidden md:block text-lg font-extrabold bg-gradient-to-r from-indigo-600 to-purple-600 bg-clip-text text-transparent ml-2 truncate"
@@ -22,9 +22,9 @@
         <button
           type="button"
           (click)="navigateToPage(sidebarMenu.id)"
-          class="flex items-center w-full px-2 py-2 my-1 rounded-md transition-colors duration-200 cursor-pointer"
+          class="flex items-center w-full px-1 py-1 my-1 rounded-sm transition-colors duration-200 cursor-pointer"
           [ngClass]="{
-            'bg-gray-200 border border-indigo-200': activeUrl() === sidebarMenu.link,
+            'bg-gray-400 text-gray-900 border border-indigo-200': activeUrl() === sidebarMenu.link,
             'text-gray-700 hover:bg-gray-200 hover:text-gray-900': activeUrl() !== sidebarMenu.link
           }"
         >
@@ -35,10 +35,10 @@
     </nav>
 
     <!-- Logout -->
-    <div class="p-2 border-t border-gray-100">
+    <div class="p-1 border-t border-gray-100">
       <button
         type="button"
-        class="w-full flex items-center justify-center md:justify-start px-2 py-2 rounded-md text-red-600 hover:bg-red-50 transition-colors duration-200 text-sm font-semibold"
+        class="w-full flex items-center justify-center md:justify-start px-2 py-2 rounded-md text-red-600 hover:bg-red-50 transition-colors duration-200 text-xs font-semibold"
         (click)="logout()"
       >
         <i class="fas fa-sign-out-alt w-5 min-w-[24px] text-center mx-1"></i>
