--- a/src/app/components/layout/sidebar-component/sidebar-component.html
+++ b/src/app/components/layout/sidebar-component/sidebar-component.html
@@ -17,7 +17,7 @@
     </div>
 
     <!-- Navigation -->
-    <nav class="flex-1 py-1 px-1 text-xs font-medium overflow-y-auto">
+    <nav class="flex-1 py-1 px-1 text-sm font-medium overflow-y-auto">
       @for (sidebarMenu of sidebarMenus(); track sidebarMenu.id) {
         <button
           type="button"
@@ -38,7 +38,7 @@
     <div class="p-1 border-t border-gray-100">
       <button
         type="button"
-        class="w-full flex items-center justify-center md:justify-start px-2 py-2 rounded-md text-red-600 hover:bg-red-50 transition-colors duration-200 text-xs font-semibold"
+        class="w-full flex items-center justify-center md:justify-start px-2 py-2 rounded-md text-red-600 hover:bg-red-50 transition-colors duration-200 text-sm font-semibold"
         (click)="logout()"
       >
         <i class="fas fa-sign-out-alt w-5 min-w-[24px] text-center mx-1"></i>
