--- a/src/app/pages/role-master-page/role-master-page.html
+++ b/src/app/pages/role-master-page/role-master-page.html
@@ -11,7 +11,7 @@
         (click)="openPopup()"
         type="button" 
         class="inline-flex items-center gap-x-2 rounded-xl
-          text-gray-800 px-4 py-2 text-xs font-semibold shadow-md hover:shadow-lg hover:scale-[1.02] hover:border-indigo-200
+          text-gray-800 px-4 py-2 text-sm font-semibold shadow-md hover:shadow-lg hover:scale-[1.02] hover:border-indigo-200
           transition-all duration-200 ease-out bg-gray-200 border border-transparent focus:outline-none 
           focus:ring-2 focus:ring-indigo-100/40 active:scale-[0.98] cursor-pointer">
         <svg class="h-3 w-3" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
@@ -27,35 +27,35 @@
         <table class="min-w-full divide-y divide-gray-200">
           <thead class="bg-gray-50">
             <tr>
-              <th class="px-6 py-3 text-center text-xs font-medium text-gray-500 uppercase tracking-wider">ID</th>
-              <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Name</th>
-              <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Roles</th>
-              <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Status</th>
-              <th class="px-6 py-3 text-center text-xs font-medium text-gray-500 uppercase tracking-wider">Actions</th>
+              <th class="px-6 py-3 text-center text-sm font-medium text-gray-500 uppercase tracking-wider">ID</th>
+              <th class="px-6 py-3 text-left text-sm font-medium text-gray-500 uppercase tracking-wider">Name</th>
+              <th class="px-6 py-3 text-left text-sm font-medium text-gray-500 uppercase tracking-wider">Roles</th>
+              <th class="px-6 py-3 text-left text-sm font-medium text-gray-500 uppercase tracking-wider">Status</th>
+              <th class="px-6 py-3 text-center text-sm font-medium text-gray-500 uppercase tracking-wider">Actions</th>
             </tr>
           </thead>
 
           <tbody class="bg-white divide-y divide-gray-100">
               @for (team of masterService.teamsList(); track team.id) {
                   <tr class="hover:bg-gray-100 transition-colors group">
-                    <td class="px-4 py-2 border border-gray-100 whitespace-nowrap text-xs text-gray-500 text-center">{{ team.id }}</td>
-                    <td class="px-4 py-2 border border-gray-100 whitespace-nowrap text-xs text-gray-800 font-medium">{{ team.name }}</td>
-                    <td class="px-4 py-2 border border-gray-100 whitespace-nowrap text-xs text-gray-800 font-medium">
+                    <td class="px-4 py-2 border border-gray-100 whitespace-nowrap text-sm text-gray-500 text-center">{{ team.id }}</td>
+                    <td class="px-4 py-2 border border-gray-100 whitespace-nowrap text-sm text-gray-800 font-medium">{{ team.name }}</td>
+                    <td class="px-4 py-2 border border-gray-100 whitespace-nowrap text-sm text-gray-800 font-medium">
                         <ul class="flex flex-wrap gap-2">
                           @for (role of team.roles; track role.id) {
-                            <li class="px-3 py-1 rounded-full shadow-sm text-xs hover:bg-gray-600 hover:text-white transition-colors">
+                            <li class="px-3 py-1 rounded-full shadow-sm text-sm hover:bg-gray-600 hover:text-white transition-colors">
                               {{ role.name }}
                             </li>
                           }
                         </ul>
                     </td>
                     <td class="px-4 py-2 border border-gray-100 whitespace-nowrap">
-                      <span class="px-3 py-1 text-xs font-semibold rounded-full">
+                      <span class="px-3 py-1 text-sm font-semibold rounded-full">
                           {{ team.status | titlecase }}
                       </span>
                     </td>
                     <td class="px-4 py-2 whitespace-nowrap text-center">
-                        <button class="text-gray-500 hover:text-gray-900 font-semibold opacity-100 group-hover:opacity-100 transition-opacity text-xs cursor-pointer">
+                        <button class="text-gray-500 hover:text-gray-900 font-semibold opacity-100 group-hover:opacity-100 transition-opacity text-sm cursor-pointer">
                             Edit
                         </button>
                     </td>
@@ -100,7 +100,7 @@
         (click)="masterService.toggleShowDesignationPopup()"
         type="button" 
         class="inline-flex items-center gap-x-2 rounded-xl
-          text-gray-800 px-4 py-2 text-xs font-semibold shadow-md hover:shadow-lg hover:scale-[1.02] hover:border-indigo-200
+          text-gray-800 px-4 py-2 text-sm font-semibold shadow-md hover:shadow-lg hover:scale-[1.02] hover:border-indigo-200
           transition-all duration-200 ease-out bg-gray-200 border border-transparent focus:outline-none 
           focus:ring-2 focus:ring-indigo-100/40 active:scale-[0.98] cursor-pointer">
         <svg class="h-3 w-3" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
@@ -115,10 +115,10 @@
         <table class="min-w-full divide-y divide-gray-200">
           <thead class="bg-gray-50">
             <tr>
-              <th class="px-6 py-3 text-center text-xs font-medium text-gray-500 uppercase tracking-wider">ID</th>
-              <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Name</th>
-              <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Status</th>
-              <th class="px-6 py-3 text-center text-xs font-medium text-gray-500 uppercase tracking-wider">Actions</th>
+              <th class="px-6 py-3 text-center text-sm font-medium text-gray-500 uppercase tracking-wider">ID</th>
+              <th class="px-6 py-3 text-left text-sm font-medium text-gray-500 uppercase tracking-wider">Name</th>
+              <th class="px-6 py-3 text-left text-sm font-medium text-gray-500 uppercase tracking-wider">Status</th>
+              <th class="px-6 py-3 text-center text-sm font-medium text-gray-500 uppercase tracking-wider">Actions</th>
             </tr>
           </thead>
 
@@ -128,12 +128,12 @@
                     <td class="px-4 py-2 border border-gray-100 whitespace-nowrap text-sm text-gray-500 text-center">{{ designation.id }}</td>
                     <td class="px-4 py-2 border border-gray-100 whitespace-nowrap text-sm text-gray-800 font-medium">{{ designation.name }}</td>
                     <td class="px-4 py-2 border border-gray-100 whitespace-nowrap">
-                      <span class="px-3 py-1 text-xs font-semibold rounded-full">
+                      <span class="px-3 py-1 text-sm font-semibold rounded-full">
                           {{ designation.status | titlecase }}
                       </span>
                     </td>
                     <td class="px-4 py-2 whitespace-nowrap text-center">
-                        <button (click)="editDesignation(designation)" class="text-gray-500 hover:text-gray-900 font-semibold opacity-100 group-hover:opacity-100 transition-opacity text-xs cursor-pointer">
+                        <button (click)="editDesignation(designation)" class="text-gray-500 hover:text-gray-900 font-semibold opacity-100 group-hover:opacity-100 transition-opacity text-sm cursor-pointer">
                             Edit
                         </button>
                     </td>
@@ -173,7 +173,7 @@
 
 @if (masterService.showDesignationAddPopup()) {
   <div
-    class="fixed inset-0 bg-gray-800/50 backdrop-blur-xs transition-opacity z-40 flex items-center justify-center text-xs"
+    class="fixed inset-0 bg-gray-800/50 backdrop-blur-xs transition-opacity z-40 flex items-center justify-center text-sm"
     [class.opacity-0]="!masterService.showDesignationAddPopup()"
     [class.pointer-events-none]="!masterService.showDesignationAddPopup()"
   >
@@ -204,7 +204,7 @@
               type="text"
               formControlName="name"
               placeholder="Enter designation name"
-              class="w-full rounded-xl border border-gray-100 p-2 text-xs text-gray-600 focus:outline-none focus:border-gray-400"
+              class="w-full rounded-xl border border-gray-100 p-2 text-sm text-gray-600 focus:outline-none focus:border-gray-400"
             />
             @if (masterService.designationForm.get('name')?.touched && masterService.designationForm.get('name')?.invalid) {
               <small
@@ -254,7 +254,7 @@
 
           <button
             type="submit"
-            class="items-center gap-x-2 rounded-xl w-full text-gray-800 px-4 py-2 text-xs font-semibold shadow-md hover:shadow-lg hover:scale-[1.02] hover:border-indigo-200 transition-all duration-200 ease-out bg-gray-200 border border-transparent focus:outline-none focus:ring-2 focus:ring-indigo-100/40 active:scale-[0.98] cursor-pointer"
+            class="items-center gap-x-2 rounded-xl w-full text-gray-800 px-4 py-2 text-sm font-semibold shadow-md hover:shadow-lg hover:scale-[1.02] hover:border-indigo-200 transition-all duration-200 ease-out bg-gray-200 border border-transparent focus:outline-none focus:ring-2 focus:ring-indigo-100/40 active:scale-[0.98] cursor-pointer"
           >
             Add Designation
           </button>
@@ -290,6 +290,130 @@
       <h2 class="text-lg font-semibold text-gray-800 mb-4 border-b border-gray-200 pb-2">
         Add Team
       </h2>
+
+      <form
+          [formGroup]="masterService.teamForm"
+          (ngSubmit)="onTeamSubmit()"
+          class="p-4 max-w-md mx-auto space-y-3"
+        >
+          <div>
+            <label class="block text-gray-700 font-medium mb-1">Team Name</label>
+            <input
+              type="text"
+              formControlName="name"
+              placeholder="Enter team name"
+              class="w-full rounded-xl border border-gray-200 p-2 text-sm text-gray-600 focus:outline-none focus:border-gray-400"
+            />
+            @if (masterService.teamForm.get('name')?.touched && masterService.teamForm.get('name')?.invalid) {
+              <small
+                class="text-red-500"
+              >
+                Name is required (min 3 chars)
+              </small>
+            }
+          </div>
+
+          <div>
+            <label class="block text-gray-700 font-medium mb-1">Status</label>
+          
+            <div class="relative w-full">
+              
+              <select
+                formControlName="status"
+                class="
+                  w-full rounded-xl border border-gray-200 p-2 pr-10
+                  text-sm text-gray-600 
+                  focus:outline-none focus:border-blue-500 focus:ring-2 focus:ring-blue-500
+                  hover:border-gray-400
+                  transition-colors duration-200 ease-in-out
+                  appearance-none 
+                "
+              >
+                <option value="" disabled selected>Select status</option>
+                @for (status of masterService.statuses; track $index) {
+                  <option [value]="status.value">{{ status.value | titlecase }}</option>
+                }
+              </select>
+              
+              <div class="absolute inset-y-0 right-0 flex items-center px-3 pointer-events-none">
+                <svg class="w-5 h-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+                  <path fill-rule="evenodd" d="M5.22 8.22a.75.75 0 0 1 1.06 0L10 11.94l3.72-3.72a.75.75 0 1 1 1.06 1.06l-4.25 4.25a.75.75 0 0 1-1.06 0L5.22 9.28a.75.75 0 0 1 0-1.06Z" clip-rule="evenodd" />
+                </svg>
+              </div>
+
+            </div>
+          
+            @if (masterService.teamForm.get('status')?.touched && masterService.teamForm.get('status')?.invalid) {
+              <small class="text-red-500 mt-1">
+                Please select a status
+              </small>
+            }
+          </div>
+
+          <div class="designation-dropdown-container relative">
+            <label class="block text-gray-700 font-medium mb-1">Designations</label>
+
+            <!-- Field Display -->
+            <div
+              class="w-full border border-gray-200 rounded-xl p-2 cursor-pointer text-sm text-gray-600 flex flex-wrap gap-2 min-h-[40px] focus-within:border-blue-500 focus-within:ring-2 focus-within:ring-blue-500 transition-all duration-200 ease-in-out"
+              (click)="toggleDropdown($event)"
+            >
+              @if (masterService.teamForm.get('designations')?.value?.length) {
+                @for (designation of masterService.teamForm.get('designations')?.value; track designation.id) {
+                  <span
+                    class="bg-blue-100 text-blue-700 px-2 py-0.5 rounded-full text-[10px] flex items-center"
+                  >
+                    {{ designation.name }}
+                    <button
+                      type="button"
+                      class="ml-1 text-blue-600 hover:text-blue-800"
+                      (click)="removeDesignation(designation, $event)"
+                    >
+                      ✕
+                    </button>
+                  </span>
+                }
+              } @else {
+                <span class="text-gray-400">Select designations...</span>
+              }
+            </div>
+
+            <!-- Dropdown -->
+            @if (showDesignationDropdown) {
+              <div
+                class="absolute z-20 bg-white shadow-lg rounded-xl mt-1 w-full border border-gray-100 max-h-48 overflow-y-auto"
+              >
+                @for (designation of masterService.designations(); track designation.id) {
+                  <div
+                    class="px-3 py-1.5 text-sm text-gray-700 hover:bg-gray-100 cursor-pointer flex items-center gap-2"
+                    (click)="toggleDesignation(designation)"
+                  >
+                    <input
+                      type="checkbox"
+                      [checked]="isSelected(designation)"
+                      class="accent-blue-500 cursor-pointer"
+                    />
+                    {{ designation.name }}
+                  </div>
+                }
+              </div>
+            }
+
+            @if (
+              masterService.teamForm.get('designations')?.touched &&
+              masterService.teamForm.get('designations')?.invalid
+            ) {
+              <small class="text-red-500 mt-1">Please select at least one designation</small>
+            }
+          </div>
+
+        <button
+          type="submit"
+          class="items-center gap-x-2 rounded-xl w-full text-gray-800 px-4 py-2 text-sm font-semibold shadow-md hover:shadow-lg hover:scale-[1.02] hover:border-indigo-200 transition-all duration-200 ease-out bg-gray-200 border border-transparent focus:outline-none focus:ring-2 focus:ring-indigo-100/40 active:scale-[0.98] cursor-pointer"
+        >
+          Add Team
+        </button>
+      </form>
     </div>
   </div>
 }
