--- a/src/app/pages/settings-page/settings-page.html
+++ b/src/app/pages/settings-page/settings-page.html
@@ -1,3 +1,3 @@
-<div class="p-4 mt-2 bg-white rounded-md text-xs">
+<div class="p-4 mt-2 bg-white rounded-md text-sm">
     <p>settings-page works!</p>
 </div>
