--- a/src/app/pages/role-master-page/role-master-page.html
+++ b/src/app/pages/role-master-page/role-master-page.html
@@ -55,7 +55,8 @@
                       </span>
                     </td>
                     <td class="px-4 py-2 whitespace-nowrap text-center">
-                        <button class="text-gray-500 hover:text-gray-900 font-semibold opacity-100 group-hover:opacity-100 transition-opacity text-sm cursor-pointer">
+                        <button class="text-gray-500 hover:text-gray-900 font-semibold opacity-100 group-hover:opacity-100 transition-opacity text-sm cursor-pointer"
+                        (click)="editTeam(team)">
                             Edit
                         </button>
                     </td>
